Add email field and add intake status
